--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,13 @@ environment:
 dependencies: 
   cupertino_icons: ^1.0.2
   get: 4.6.1
+  firebase_core: 1.13.1
+  cloud_firestore: 3.1.10
+  firebase_auth: 3.3.11
+  firebase_database: 9.0.8
+  result_type: 0.1.0
+  firebase_storage: 10.2.9
+  cached_network_image: 3.2.0
   flutter: 
     sdk: flutter
 
@@ -17,5 +24,8 @@ dev_dependencies:
     sdk: flutter
 
 flutter: 
+  assets: 
+    - assets/images/
+    - assets/fonts/
   uses-material-design: true
 
