--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   result_type: 0.1.0
   firebase_storage: 10.2.9
   cached_network_image: 3.2.0
+  lottie: 1.2.2
   flutter: 
     sdk: flutter
 
