--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_storage: 10.2.9
   cached_network_image: 3.2.0
   lottie: 1.2.2
+  pin_code_fields: 7.3.0
   flutter: 
     sdk: flutter
 
