--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cached_network_image: 3.2.0
   lottie: 1.2.2
   pin_code_fields: 7.3.0
+  shared_preferences: 2.0.13
   flutter: 
     sdk: flutter
 
